# afids-carto

./: Makefile.am  Makefile.in  README  README_RPM  aclocal.m4  carto.am  carto.pc.in  carto.spec  configure  configure.ac
inc/carto/: GE1Manager.h  IKManager.h  PleiadesManager.h  QBManager.h  RapidEyeManager.h  SpotManager.h  WV2Manager.h  cartoClassUtils.h  cartoLinkedList.h  cartoStrUtils.h  cartoTieUtils.h  cartoVicarProtos.h  fgetl.h  hdfIncludes.h  ibisControlMapper.h  ibishelper.h  io_flat.h  lsqequation.h  lsqibis.h  mparse.h  textread.h
src/: .svnignore  GE1Manager.c  IKManager.c  ImageUtils.c  PleiadesManager.c  QBManager.c  RapidEyeManager.c  SpotManager.c  WV2Manager.c  astroreference_camera.c  atteph_convert.c  camera_frame.c  carto.c  carto.imake  cartoClassUtils.c  cartoGridUtils.c  cartoGtUtils.c  cartoLinkedList.c  cartoLoggerUtils.c  cartoLsqUtils.c  cartoMatUtils.c  cartoMemUtils.c  cartoRpcUtils.c  cartoSortUtils.c  cartoStrUtils.c  cartoTaeUtils.c  cartoTieUtils.c  cblas.c  count_lines.c  csvd.c  dbfopen.c  earth_coordinates.c  endianness.c  eos_coords.c  ephreference_camera.c  estimate_affine_projection.c  estimate_wpp_camera.c  extract_azr.c  fgetl.c  georeference_camera.c  (+28 more)
